--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
 
 <section class="sectionFour">
 <div class="sellNfts">
-<div class="uniqueBtn">
+<!-- <div class="uniqueBtn">
     <button>UNIQUE FILES</button>
-</div>
+</div> -->
 </div>
 </section>
 
